string added for referral code alertdilaog

--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1207,5 +1207,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="note_detail_in_english">कृपया अपनी बैंक डिटेल्स केवल अंग्रेजी में दर्ज करें</string>
     <string name="campaign_details_ineligible">अयोग्य</string>
     <string name="track_status">स्टेट्स ट्रैक करें</string>
+    <string name="please_apply">Please Apply First</string>
+    <string name="referral_code_alert_message">The referral code you entered was incorrect. Click OK to continue without referral code.</string>
+    <string name="alert_message_title">Message</string>
 
 </resources>
