--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -1226,5 +1226,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
         <item>ਪੰਜਾਬੀ</item>
     </string-array>
     <string name="add_a_choice">Add a choice</string>
+    <string name="please_apply">Please Apply First</string>
+    <string name="referral_code_alert_message">The referral code you entered was incorrect. Click OK to continue without referral code.</string>
+    <string name="alert_message_title">Message</string>
 
 </resources>
