--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -1184,5 +1184,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="choose_from_gallery">गॅलरीमधून प्रतिमा निवडा</string>
     <string name="add_a_choice">निवड जोडा</string>
     <string name="invite_referral_screen">Invite &amp; Earn MyMoney!</string>
+    <string name="please_apply">Please Apply First</string>
+    <string name="referral_code_alert_message">The referral code you entered was incorrect. Click OK to continue without referral code.</string>
+    <string name="alert_message_title">Message</string>
 
 </resources>
