--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1186,4 +1186,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="slide_to_cancel">కాన్సిల్ చేయడానికి స్లైడ్ చేయండి</string>
     <string name="choose_from_gallery">మీ గాలరీ నుండి చిత్రాన్ని తీసుకోండి</string>
     <string name="capture_from_camera">కెమెరా నుండి చిత్రాన్ని తీసుకోండి</string>
+    <string name="please_apply">Please Apply First</string>
+    <string name="referral_code_alert_message">The referral code you entered was incorrect. Click OK to continue without referral code.</string>
+    <string name="alert_message_title">Message</string>
 </resources>
