--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1340,6 +1340,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="enter_paytm_number">Please enter your paytm registered mobile number</string>
     <string name="note_detail_in_english">Note: Please enter your bank information in English only</string>
     <string name="track_status">TRACK STATUS</string>
+    <string name="please_apply">Please Apply First</string>
+    <string name="referral_code_alert_message">The referral code you entered was incorrect. Click OK to continue without referral code.</string>
+    <string name="alert_message_title">Message</string>
 
 </resources>
 
