--- a/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
@@ -1311,4 +1311,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="choose_from_gallery">ગેલેરી માંથી ફોટા ની પસંદગી કરો</string>
     <string name="capture_from_camera">કેમેરા થી ફોટો પાડો</string>
     <string name="add_a_choice">પસંદ જોડો</string>
+    <string name="please_apply">Please Apply First</string>
+    <string name="referral_code_alert_message">The referral code you entered was incorrect. Click OK to continue without referral code.</string>
+    <string name="alert_message_title">Message</string>
 </resources>
