--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -1231,7 +1231,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="add_a_choice">തിരഞ്ഞെടുക്കലുകൾ ചേർക്കാം</string>
     <string name="private_profile_read_article">ലേഖനങ്ങൾ വായിക്കാം</string>
     <string name="mymoney_profile">മൈ മണി പ്രൊഫൈൽ</string>
-
+    <string name="please_apply">Please Apply First</string>
+    <string name="referral_code_alert_message">The referral code you entered was incorrect. Click OK to continue without referral code.</string>
+    <string name="alert_message_title">Message</string>
 
 
 </resources>
