--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1333,8 +1333,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="add_a_choice">Add a choice</string>
 
     <string name="rewards_edit">Edit</string>
-    <string name="rewards_yes">Edit</string>
-    <string name="rewards_no">Edit</string>
+    <string name="rewards_yes">Yes</string>
+    <string name="rewards_no">No</string>
     <string name="rewards_expected_date_delivery">EXPECTED DATE OF DELIVERY</string>
     <string name="add_instagram_handle">Add Instagram handle e.g. ritu_mommy</string>
     <string name="enter_paytm_number">Please enter your paytm registered mobile number</string>
