--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -23,7 +23,7 @@
     <string name="error_network">ਉਪਕਰਣ ਨੈਟਵਰਕ ਖੇਤਰ ਤੋਂ ਬਾਹਰ ਹੈ.</string>
     <string name="please_wait">ਕਿਰਪਾ ਕਰਕੇ ਇੰਤਜ਼ਾਰ ਕਰੋ...</string>
     <string name="no_result_txt">No result found.</string>
-    <string name="invite_referral_screen">Invite &amp; Earn MyMoney!</string>
+    <string name="invite_referral_screen">Give 25, Get 25!</string>
     <string name="went_wrong">ਕੁਝ ਗਲਤ ਹੋ ਗਿਆ.</string>
     <string name="server_went_wrong">ਸਰਵਰ ਤੇ ਕੁਝ ਗਲਤ ਹੋ ਗਿਆ.</string>
     <string name="no_data">Data not found.</string>
