--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -1182,7 +1182,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="capture_from_camera">கேமராவை பயன்படுத்தி புகைப்படத்தை பதிவேற்றவும்</string>
     <string name="choose_from_gallery">கேலரியில் இருந்து புகைப்படத்தை பதிவேற்றவும்</string>
     <string name="add_a_choice">தெரிவை சேர்க்கவும்</string>
-    <string name="invite_referral_screen">Invite &amp; Earn MyMoney!</string>
+    <string name="invite_referral_screen">Give 25, Get 25!</string>
     <string name="please_apply">Please Apply First</string>
     <string name="referral_code_alert_message">The referral code you entered was incorrect. Click OK to continue without referral code.</string>
     <string name="alert_message_title">Message</string>
