--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1117,7 +1117,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="groups_enable_notification">ENABLE NOTIFICATION</string>
     <string name="mymoney_profile">MyMoney Profile</string>
     <string name="private_profile_read_article">వ్యాసాలను చదవండి</string>
-    <string name="invite_referral_screen">Invite &amp; Earn MyMoney!</string>
+    <string name="invite_referral_screen">Give 25, Get 25!</string>
     <string-array name="improve_page_views_array">
         <item>మీ వ్యాసాలని ఇతర బ్లాగ్ పోస్టులతో లింక్ చేయండి</item>
         <item>స్థిరంగా ప్రతి వారం రాస్తూ ఉండండి</item>
