--- a/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
@@ -23,7 +23,7 @@
     <string name="error_network">Device is out of network coverage.</string>
     <string name="please_wait">Please Wait...</string>
     <string name="no_result_txt">No result found.</string>
-    <string name="invite_referral_screen">Invite &amp; Earn MyMoney!</string>
+    <string name="invite_referral_screen">Give 25, Get 25!</string>
     <string name="went_wrong">Something went wrong.</string>
     <string name="server_went_wrong">Something went wrong at the server.</string>
     <string name="no_data">Data not found.</string>
