--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1196,7 +1196,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="capture_from_camera"></string>
     <string name="choose_from_gallery"></string>
     <string name="add_a_choice"></string>
-    <string name="invite_referral_screen">आमंत्रित करें और कमायें MyMoney</string>
+    <string name="invite_referral_screen">Give 25, Get 25!</string>
 
     <string name="rewards_edit">एडिट करें</string>
     <string name="rewards_yes">हाँ</string>
